--- a/library.html
+++ b/library.html
@@ -3,20 +3,23 @@
 <body bgcolor = wheat>
 <form>
 <center>
-<P><STRONG><U><FONT size=5>**** CSC484: Database Management Systems ****</FONT></U
+<P><STRONG><U><FONT size=5>**** CSC484: Library Management System ****</FONT></U
 ></STRONG></P>
-<P><STRONG><U>ADMINISTRATOR PAGE</U></STRONG></P>
+<P><STRONG><U>*NAME GOES HERE*</U></STRONG></P>
 <hr>
 <br><br>
 <TABLE>
 <TR>
-<TD><a href = library1.php>Display Loaned Books</a></TD>
+<TD><a href = library1.php>Display Books</a></TD>
 </TR>
 <TR>
-<TD><a href = library2.php>Display Members</a></TD>
+<TD><a href = library4.php>Update Books</a></TD>
 </TR>
 <TR>
-<TD><a href = library3.php>Update Members</a></TD>
+<TD><a href = library2.php>Display Patrons</a></TD>
+</TR>
+<TR>
+<TD><a href = library3.php>Add New Patron</a></TD>
 </TR>
 </TABLE>
 </center>
