updated database calls

--- a/library.html
+++ b/library.html
@@ -10,7 +10,7 @@
 <br><br>
 <TABLE>
 <TR>
-<TD><a href = library1.php>Display Books</a></TD>
+<TD><a href = library1.php>Display Loaned Books</a></TD>
 </TR>
 <TR>
 <TD><a href = library4.php>Update Books</a></TD>
