--- a/library.html
+++ b/library.html
@@ -1,6 +1,6 @@
 <html>
 <title>Administration page</title>
-<body bgcolor = wheat>
+<body bgcolor = lavender>
 <form>
 <center>
 <P><STRONG><U><FONT size=5>**** CSC484: Library Management System ****</FONT></U
